<resources>
    <string name="app_name">OpenDigs</string>
    <string name="action_settings">Settings</string>

    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>

    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="no_account_q">Do not have an account?</string>
</resources>
