<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.LoginActivity">

    <include
        android:id="@+id/appbar"
        layout="@layout/include_activity_toolbar" />

    <ImageView
        android:id="@+id/background_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <LinearLayout
        android:layout_below="@id/appbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TableLayout
            android:id="@+id/table_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:stretchColumns="1">

            <TableRow
                android:layout_marginBottom="6dp">

                <TextView
                    style="@style/FormLabel"
                    android:text="@string/username" />

                <EditText
                    android:id="@+id/user_name"
                    android:inputType="textEmailAddress"
                    android:textSize="@dimen/form_text_size" />
            </TableRow>

            <TableRow>

                <TextView
                    style="@style/FormLabel"
                    android:text="@string/password" />

                <EditText
                    android:id="@+id/password"
                    android:inputType="textPassword"
                    android:textSize="@dimen/form_text_size" />
            </TableRow>

            <TableRow>

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp" />

                <Button
                    android:id="@+id/submit"
                    android:layout_marginTop="12dp"
                    android:text="@string/submit"
                    android:textColor="@color/textButton" />
            </TableRow>
        </TableLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_weight="1"
            android:gravity="bottom|center_horizontal"
            android:text="@string/no_account_q" />

        <Button
            android:id="@+id/sign_up_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="12dp"
            android:text="@string/sign_up"
            android:textColor="@color/textButton" />

    </LinearLayout>
</RelativeLayout>